Consent preparation page security (#402)